--- a/scheduleShare.html
+++ b/scheduleShare.html
@@ -22,7 +22,16 @@
         }
 
         function sendRequestToNotion() {
-            console.log('sendRequestToNotion');
+            fetch('', {
+                method: 'POST',
+                headers: {
+                    'Content-Type': 'application/json'
+                },
+                body: JSON.stringify({ key: 'value' })
+            })
+                .then(response => response.json())
+                .then(data => console.log(data))
+                .catch(error => console.error('Error:', error));
         }
     })
 </script>
@@ -50,11 +59,10 @@
         position: absolute;
         left: 50%;
         top: 50%;
-        transform: translate(-50%, -50%);
     }
 
     #custom-button:active {
-        transform: scale(0.95);
+        scale: 0.95;
     }
 </style>
 </html>
