added styling for button

--- a/instructorScheduleButtonPage/index.html
+++ b/instructorScheduleButtonPage/index.html
@@ -16,4 +16,5 @@
     <button class="ui primary button" id="schedule-btn">Оновити графік</button>
     <p id="error-text"></p>
   </body>
+<script src="index.js"></script>
 </html>
